Add LGoodDatePicker library to maven pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -75,5 +75,10 @@
             <artifactId>json</artifactId>
             <version>20170516</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.lgooddatepicker</groupId>
+            <artifactId>LGoodDatePicker</artifactId>
+            <version>10.3.1</version>
+        </dependency>
     </dependencies>
 </project>
